--- a/src/schooltool/gradebook/locales/es_SV.po
+++ b/src/schooltool/gradebook/locales/es_SV.po
@@ -9,15 +9,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: schooltool\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-10-02 01:45-0600\n"
-"PO-Revision-Date: 2011-10-26 17:24+0000\n"
+"POT-Creation-Date: 2011-11-18 04:23+0200\n"
+"PO-Revision-Date: 2011-11-18 17:38+0000\n"
 "Last-Translator: Douglas Cerna <douglascerna@yahoo.com>\n"
 "Language-Team: Spanish\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2011-10-29 05:40+0000\n"
-"X-Generator: Launchpad (build 14197)\n"
+"X-Launchpad-Export-Date: 2011-11-19 05:57+0000\n"
+"X-Generator: Launchpad (build 14299)\n"
 "Language: \n"
 
 #: /src/schooltool/gradebook/activity.py:52
@@ -587,7 +587,15 @@ msgstr "Actividad de Reporte"
 msgid "New Template"
 msgstr "Nueva Plantilla"
 
-#: /src/schooltool/gradebook/browser/flourish.zcml:546
+#: /src/schooltool/gradebook/browser/flourish.zcml:538
+msgid "Action"
+msgstr "Acción"
+
+#: /src/schooltool/gradebook/browser/flourish.zcml:548
+msgid "Hide/unhide Sheets"
+msgstr "Ocultar/Mostrar Hojas"
+
+#: /src/schooltool/gradebook/browser/flourish.zcml:582
 msgid "My Grades"
 msgstr "Mis Notas"
 
@@ -932,7 +940,12 @@ msgstr "-- Año completo --"
 msgid "-- Select a template --"
 msgstr "-- Seleccione una plantilla --"
 
-#: /src/schooltool/gradebook/browser/report_card.py:316
+#. Default: ""
+#: /src/schooltool/gradebook/browser/report_card.py:386
+msgid "Hide/unhide Report Sheets for ${year}"
+msgstr "Ocultar/Mostrar Hojas de Reporte para ${year}"
+
+#: /src/schooltool/gradebook/browser/report_card.py:461
 msgid "Report Sheet Template Details"
 msgstr "Detalles de la Plantilla de Hoja de Reporte"
 
@@ -1278,7 +1291,11 @@ msgstr "Ocultar Tar."
 msgid "Points"
 msgstr "Puntos"
 
-#: /src/schooltool/gradebook/browser/templates/f_gradebook_overview.pt:120
+#: /src/schooltool/gradebook/browser/templates/f_gradebook_overview.pt:95
+msgid "Report"
+msgstr "Reporte"
+
+#: /src/schooltool/gradebook/browser/templates/f_gradebook_overview.pt:126
 msgid "Score this"
 msgstr "Calificar esto"
 
@@ -1355,7 +1372,34 @@ msgstr "Luego de crear un plantilla, el siguiente paso es ${deploy-sheet}"
 msgid "deploy it to teacher gradebooks."
 msgstr "implementarla en los cuadros de notas de los profesores."
 
+#: /src/schooltool/gradebook/browser/templates/f_hide_unhide_report_sheets.pt:3
+#: /src/schooltool/gradebook/browser/templates/f_report_sheets.pt:11
+msgid "Currently Deployed Report Sheets"
+msgstr "Hojas de Reporte Implementadas Actualmente"
+
+#: /src/schooltool/gradebook/browser/templates/f_hide_unhide_report_sheets.pt:12
+#: /src/schooltool/gradebook/browser/templates/f_report_sheets.pt:15
+#: /src/schooltool/gradebook/browser/templates/hide_report_worksheet.pt:22
+#: /src/schooltool/gradebook/browser/templates/unhide_report_worksheet.pt:22
+msgid "Report Sheet"
+msgstr "Hoja de Reporte"
+
+#: /src/schooltool/gradebook/browser/templates/f_hide_unhide_report_sheets.pt:13
+msgid "Index"
+msgstr "Índice"
+
+#: /src/schooltool/gradebook/browser/templates/f_hide_unhide_report_sheets.pt:17
+#: /src/schooltool/gradebook/browser/templates/f_worksheets.pt:11
+msgid "Hidden?"
+msgstr "Oculta?"
+
+#: /src/schooltool/gradebook/browser/templates/f_hide_unhide_report_sheets.pt:35
+#: /src/schooltool/gradebook/browser/templates/f_report_sheets.pt:30
+msgid "This year has no report sheets deployed."
+msgstr "Este año no tiene hojas de reporte implementadas."
+
 #: /src/schooltool/gradebook/browser/templates/f_mygrades.pt:5
+#: /src/schooltool/gradebook/browser/templates/f_student_gradebook.pt:5
 #: /src/schooltool/gradebook/browser/templates/mygrades.pt:75
 msgid "Nothing Graded"
 msgstr "Sin Calificar"
@@ -1406,21 +1450,7 @@ msgstr ""
 "Las libretas de notas pueden generarse para una persona específica o para "
 "todas las personas en un grupo."
 
-#: /src/schooltool/gradebook/browser/templates/f_report_sheets.pt:3
-msgid "Currently Deployed Report Sheets"
-msgstr "Hojas de Reporte Implementadas Actualmente"
-
-#: /src/schooltool/gradebook/browser/templates/f_report_sheets.pt:7
-#: /src/schooltool/gradebook/browser/templates/hide_report_worksheet.pt:22
-#: /src/schooltool/gradebook/browser/templates/unhide_report_worksheet.pt:22
-msgid "Report Sheet"
-msgstr "Hoja de Reporte"
-
-#: /src/schooltool/gradebook/browser/templates/f_report_sheets.pt:22
-msgid "This year has no report sheets deployed."
-msgstr "Este año no tiene hojas de reporte implementadas."
-
-#: /src/schooltool/gradebook/browser/templates/f_report_sheets.pt:35
+#: /src/schooltool/gradebook/browser/templates/f_report_sheets.pt:49
 msgid "Select report sheet to deploy"
 msgstr "Selecciones la hoja de reporte a implementar"
 
@@ -1432,6 +1462,20 @@ msgstr "Período o Año"
 #: /src/schooltool/gradebook/browser/templates/f_report_sheets.pt:43
 msgid "Select a term or deploy to the entire year."
 msgstr "Seleccione un período o implemente en el año completo."
+
+#: /src/schooltool/gradebook/browser/templates/f_report_sheets.pt:76
+#: /src/schooltool/gradebook/browser/templates/f_report_sheets.pt:98
+#: /src/schooltool/requirement/browser/scoresystem.py:407
+msgid "Required input is missing."
+msgstr "Falta una entrada requerida"
+
+#: /src/schooltool/gradebook/browser/templates/f_report_sheets.pt:93
+msgid ""
+"If you deploy the same template multiple times, give each deployment an "
+"easily distinguishable name."
+msgstr ""
+"Si implementa la misma plantilla múltiples veces, asigne a cada "
+"implementación un nombre que sea fácil de distinguir."
 
 #: /src/schooltool/gradebook/browser/templates/f_report_sheets_related.pt:12
 msgid "The first step in the process is to ${add-sheet}"
@@ -1585,10 +1629,6 @@ msgstr "Reordenar u Ocultar Hojas de Trabajo"
 msgid "Order"
 msgstr "Ordenar"
 
-#: /src/schooltool/gradebook/browser/templates/f_worksheets.pt:11
-msgid "Hidden?"
-msgstr "Oculta?"
-
 #: /src/schooltool/gradebook/browser/templates/f_worksheets.pt:52
 #: /src/schooltool/gradebook/browser/templates/f_worksheets_summary_related.pt:2
 msgid "Summary Worksheet"
@@ -1673,17 +1713,7 @@ msgstr "Nota ${name}"
 msgid "Apply a grade for all students:"
 msgstr "Aplicar una nota a todos los estudiantes:"
 
-#: /src/schooltool/gradebook/browser/templates/gradebook_overview.pt:44
-msgid ""
-"Your browser either has Javascript turned off, or it is not supported. "
-"Javascript is <b>required</b> for the gradebook. Please enable Javascript or "
-"use a browser with Javascript."
-msgstr ""
-"Su navegador tiene Javascript desactivado, o no es compatible. Javascript es "
-"<b>requerido</b> para el cuadro de notas. Por favor, active Javascript o "
-"utilice un navegador con JavaScript."
-
-#: /src/schooltool/gradebook/browser/templates/gradebook_overview.pt:58
+#: /src/schooltool/gradebook/browser/templates/gradebook_overview.pt:48
 #: /src/schooltool/gradebook/browser/templates/mygrades.pt:15
 msgid "Term:"
 msgstr "Período:"
@@ -2290,10 +2320,6 @@ msgstr "Sistema de Puntuación Existente"
 #: /src/schooltool/requirement/browser/scoresystem.py:296
 msgid "Custom score system"
 msgstr "Sistema de puntuación personalizado"
-
-#: /src/schooltool/requirement/browser/scoresystem.py:407
-msgid "Required input is missing."
-msgstr "Falta una entrada requerida"
 
 #. Default: ""
 #: /src/schooltool/requirement/browser/scoresystem.py:504
