--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,7 @@ CHANGES
 0.9.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Allow scoresystem point value be equal to the previous grade (https://launchpad.net/bugs/899228)
 
 
 0.9.2 (2011-09-22)
