Sheet1 created as first personal Worksheet (https://launchpad.net/bugs/915745)

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,7 @@ CHANGES
 2.0.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Sheet1 created as first personal Worksheet (https://launchpad.net/bugs/915745)
 
 
 2.0.1 (2011-12-22)
