Crash viewing a Section, when all sheets are hidden (https://launchpad.net/bugs/913055)

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,6 +6,8 @@ CHANGES
 ------------------
 
 - Sheet1 created as first personal Worksheet (https://launchpad.net/bugs/915745)
+- Crash viewing a Section, when all sheets are hidden
+  (https://launchpad.net/bugs/913055)
 
 
 2.0.1 (2011-12-22)
