need a Done on report_sheets (https://launchpad.net/bugs/907998)

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -13,6 +13,7 @@ CHANGES
 - Min/max should show while editing report sheet template
   (https://launchpad.net/bugs/916675)
 - Unhiding personal sheet unhides deployed sheets (https://launchpad.net/bugs/917294)
+- need a Done on report_sheets (https://launchpad.net/bugs/907998)
 
 
 2.0.1 (2011-12-22)
