in sorts, no value should be less than zero (https://launchpad.net/bugs/907895)

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -16,6 +16,7 @@ CHANGES
 - need a Done on report_sheets (https://launchpad.net/bugs/907998)
 - report sheet templates index needs a "There are no..." message
   (https://launchpad.net/bugs/907988)
+- in sorts, no value should be less than zero (https://launchpad.net/bugs/907895)
 
 
 2.0.1 (2011-12-22)
