--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -7,6 +7,7 @@ CHANGES
 
 - get fill down back in the contextual menu (https://launchpad.net/bugs/907907)
 - Course worksheet outstanding issues (https://launchpad.net/bugs/927862)
+- tab hiding (https://launchpad.net/bugs/938810)
 
 
 2.0.2 (2012-02-02)
